[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/DeathScreen.gd" type="Script" id=1]
[ext_resource path="res://Styles/UIButton.tres" type="Theme" id=2]
[ext_resource path="res://Fonts/title.tres" type="DynamicFont" id=3]

[node name="DeathScreen" type="Panel"]
self_modulate = Color( 1, 1, 1, 0.901961 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.5874
margin_right = 1.5874
custom_constants/margin_right = 61
custom_constants/margin_top = 30
custom_constants/margin_left = 61
custom_constants/margin_bottom = 30
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 61.0
margin_top = 30.0
margin_right = 963.0
margin_bottom = 570.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
margin_right = 902.0
margin_bottom = 95.0
custom_fonts/font = ExtResource( 3 )
text = "You died!"
align = 1
valign = 1

[node name="VSplitContainer" type="VSplitContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 99.0
margin_right = 902.0
margin_bottom = 375.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Retry" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 379.0
margin_top = 379.0
margin_right = 522.0
margin_bottom = 430.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Retry Level"

[node name="Level" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 373.0
margin_top = 434.0
margin_right = 529.0
margin_bottom = 485.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Level Select"

[node name="Menu" type="Button" parent="MarginContainer/VBoxContainer"]
margin_left = 375.0
margin_top = 489.0
margin_right = 527.0
margin_bottom = 540.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource( 2 )
text = "Go to Menu"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Retry" to="." method="_on_Retry_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Level" to="." method="_on_Level_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Menu" to="." method="_on_Menu_pressed"]
